--- a/Semana 3/tres en raya/tres-en-raya/src/App.css
+++ b/Semana 3/tres en raya/tres-en-raya/src/App.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  font-size: 18px;
+  background-color: #f5f5f6;
+}
+
 .App {
   display: flex;
   flex-direction: column;
