--- a/Semana 3/html-semantico/src/styles/Galeria.css
+++ b/Semana 3/html-semantico/src/styles/Galeria.css
@@ -1,7 +1,14 @@
+
 .galeria{
     display: flex;
-    justify-content: center;
-    
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+
+.galeria img{    
+    width: 25px;
+    height: 25px;
 }
 .contenedor-image{
     display: grid;
@@ -12,4 +19,5 @@
 .contenedor-image img{
     width: 120px;
     height: 60px;
+    margin: 10px;
 }
